# SharedPreferenceFlet

./: LICENSE  README.md  pyproject.toml  setup.py
sharedflet/: __init__.py  core.py  exceptions.py  utils.py
tests/: test_sharedprefs.py
