[project]
name = "sharedflet"
version = "0.1.0"
description = "Simple and secure shared preferences system with encryption"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [{ name = "Amir Louktila", email = "amir.louktila@example.com" }]
dependencies = ["cryptography>=3.4.7"]

[project.urls]
Homepage = "https://github.com/AmirLouktaila/SharedPreferenceFlet"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
